--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <td></td><td style="text-align:center">Sanctum</td><td></td>
   </tr>
   <tr>
-    <td style="text-align:center"><a href="1303 Poeta.html">Poeta</a></td><td></td><td></td>
+    <td style="text-align:center"><a href="1303_Poeta.html">Poeta</a></td><td></td><td></td>
   </tr>
   <tr>
     <td></td><td style="text-align:center">Verteron</td><td style="text-align:center">Theobomos</td>
