--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <table width="1250" height= "300" border="1">
   <tr>
-    <td></td><td style="text-align:center">Sanctum</td><td></td>
+    <td></td><td style="text-align:center">San(ctum)</td><td></td>
   </tr>
   <tr>
     <td style="text-align:center"><a href="1303_Poeta.html">Poeta</a></td><td></td><td></td>
