--- a/index.html
+++ b/index.html
@@ -9,36 +9,72 @@
   	</style>
 </head>
 <body>
-<!--                     HEADER                     -->
+<!--                   HEADER                    -->
 <header>
 <img src="mx/aubétoile_tête.jpg" width="1250" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
 <hr>
 <h1>Le Ville d'Aubétoile</h1>
-<p>Aubétoile est l'une des grandes villes de Skyrim et la capitale du Clos. 
-La ville est connue pour ses riches mines et son port et sert également de garnison le long de la côte nord de Bordeciel.</p>
+<nav>
+	<a href="#Histoire">Histoire</a>
+	<a href="#Personnages">Personnages</a>
+	<a href="#Localisations">Localisations</a>
+	<a href="#Alentours">Alentours</a>
+	<a href="#Vues">Les meilleures vues sur Aubétoile</a>
+</nav>
 
 
 
 
 
 </header>
-<!--                      MAIN                      -->
+<!--                   MAIN                    -->
 <hr>
 <main>
+<!--                             HISTOIRE                              -->
+<section>
+	<h3 id="Histoire">Histoire</h3>
+<p>Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
+<p>Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
+<p>Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
+</section>
 
 
-
-
-
-
-
-</main>
-<!--                     FOOTER                     -->
 <hr>
+<!--                             PERSONNAGES                              -->
+<section>
+	<h3 id="Personnages">Personnages</h3>
+<p></p>
+</section>
+
+
+<hr>
+<!--                             LOCALISATIONS                              -->
+<section>
+	<h3 id="Localisations">Localisations</h3>
+<p></p>
+</section>
+
+
+<hr>
+<!--                             ALENTOURS                              -->
+<section>
+	<h3 id="Alentours">Alentours</h3>
+<p></p>
+</section>
+
+
+<hr>
+<!--                             VUES                              -->
+<section>
+	<h3 id="Vues">Les meilleures vues sur Aubétoile</h3>
+<p></p>
+</section>
+
+
+<hr>
+</main>
+<!--                   FOOTER                    -->
 <footer>
-
-
-
 
 
  <address>
