--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Le Ville d'Aubétoile</title>
   	<link rel="stylesheet" href="mx/styles.css">
   	<style>
-  		body {background-color:lavender;}
+  		body {background-color:#DCD0FF;}
   	</style>
 </head>
 <body>
@@ -15,7 +15,7 @@
 <hr>
 <h1>Le Ville d'Aubétoile</h1>
 <nav>
-	<a href="#Histoire">Histoire</a>
+	<a href="#Histoire" style="display: ">Histoire</a>
 	<a href="#Personnages">Personnages</a>
 	<a href="#Localisations">Localisations</a>
 	<a href="#Alentours">Alentours</a>
@@ -33,9 +33,12 @@
 <!--                             HISTOIRE                              -->
 <section>
 	<h3 id="Histoire">Histoire</h3>
-<p>Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
-<p>Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
-<p>Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
+<span style="overflow: scroll;width: 500px;height: 350px;background-color: #fff20069;">
+<p style="width: 470px;">Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
+<p style="width: 470px;">Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
+<p style="width: 470px;">Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
+</span>
+
 </section>
 
 
@@ -68,6 +71,10 @@
 <section>
 	<h3 id="Vues">Les meilleures vues sur Aubétoile</h3>
 <p></p>
+
+<img src="mx/photo_1.jpg" width="410px">
+<img src="mx/photo_2.jpg" width="410px">
+<img src="mx/photo_3.jpg" width="410px">
 </section>
 
 
