--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 <p style="width: 440px; padding: 0px 20px;">Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
 <p style="width: 440px; padding: 0px 20px;">Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
 </span>
+<figure>
+	<img src="mx/book1.png" alt="book" title="book" width="400px">
+	<figcaption>Guide de poche de l'Empire, Troisième édition: Bordeciel</figcaption>
+</figure>
 
 </section>
 
