--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <hr>
 <h1 style="text-align: center;">Le Ville d'Aubétoile</h1>
 <nav>
-	<a href="#Histoire" style="display: ">Histoire</a>
-	<a href="#Personnages">Personnages</a>
-	<a href="#Localisations">Localisations</a>
-	<a href="#Alentours">Alentours</a>
-	<a href="#Vues">Les meilleures vues sur Aubétoile</a>
+	<a href="#Histoire" style="width: 200px;">Histoire</a>
+	<a href="#Personnages" style="width: 200px;">Personnages</a>
+	<a href="#Localisations" style="width: 200px;">Localisations</a>
+	<a href="#Alentours" style="width: 200px;">Alentours</a>
+	<a href="#Vues" style="width: 250px;">Les meilleures vues sur Aubétoile</a>
 </nav>
 
 
@@ -28,10 +28,10 @@
 
 </header>
 <!--                   MAIN                    -->
-<hr>
 <main>
+<hr>
 <!--                             HISTOIRE                              -->
-<section>
+<section id="sectionfloat">
 	<h3 id="Histoire">Histoire</h3>
 <span style="overflow: scroll;width: 500px;height: 270px;background-color: #fff20069;">
 <p style="width: 440px; padding: 0px 20px;">Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
@@ -39,7 +39,7 @@
 <p style="width: 440px; padding: 0px 20px;">Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
 </span>
 <figure>
-	<img src="mx/book1.png" alt="book" title="book" width="400px">
+	<img src="mx/book1.png" alt="book" title="book" width="200px">
 	<figcaption>Guide de poche de l'Empire, Troisième édition: Bordeciel</figcaption>
 </figure>
 
