--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
 <!--                   HEADER                    -->
 <header>
-<img src="mx/aubétoile_tête.jpg" width="1250" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
+<img src="mx/aubétoile_tête.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
 <hr>
 <h1 style="text-align: center;">Le Ville d'Aubétoile</h1>
 <nav>
-	<a href="#Histoire" style="width: 200px;">Histoire</a>
-	<a href="#Personnages" style="width: 200px;">Personnages</a>
-	<a href="#Localisations" style="width: 200px;">Localisations</a>
-	<a href="#Alentours" style="width: 200px;">Alentours</a>
-	<a href="#Vues" style="width: 250px;">Les meilleures vues sur Aubétoile</a>
+	<a href="#Histoire" style="width: 18%;">Histoire</a>
+	<a href="#Personnages" style="width: 18%;">Personnages</a>
+	<a href="#Localisations" style="width: 18%;">Localisations</a>
+	<a href="#Alentours" style="width: 18%;">Alentours</a>
+	<a href="#Vues" style="width: 21%;">Les meilleures vues sur Aubétoile</a>
 </nav>
 
 
@@ -33,14 +33,15 @@
 <!--                             HISTOIRE                              -->
 <section id="sectionfloat">
 	<h3 id="Histoire">Histoire</h3>
-<span style="overflow: scroll;width: 500px;height: 270px;background-color: #fff20069;">
-<p style="width: 440px; padding: 0px 20px;">Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
-<p style="width: 440px; padding: 0px 20px;">Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
-<p style="width: 440px; padding: 0px 20px;">Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
+<span style="overflow: scroll;width: 45%;height: 300px;background-color: #fff20069;">
+<p style="width: 85%; padding: 0% 7%;">Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
+<p style="width: 85%; padding: 0% 7%;">Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
+<p style="width: 85%; padding: 0% 7%;">Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
 </span>
-<figure>
-	<img src="mx/book1.png" alt="book" title="book" width="200px">
-	<figcaption>Guide de poche de l'Empire, Troisième édition: Bordeciel</figcaption>
+<figure style="width: 18%">
+	<img src="mx/book1.png" alt="book" title="book" width="95%">
+	<figcaption>Guide de poche de l'Empire, <br>
+	Troisième édition: Bordeciel</figcaption>
 </figure>
 
 </section>
@@ -76,9 +77,9 @@
 	<h3 id="Vues">Les meilleures vues sur Aubétoile</h3>
 <p></p>
 
-<img src="mx/photo_1.jpg" width="380px">
-<img src="mx/photo_2.jpg" width="380px">
-<img src="mx/photo_3.jpg" width="380px">
+<img src="mx/photo_1.jpg" width="31%" style="margin: 1%">
+<img src="mx/photo_2.jpg" width="31%" style="margin: 1%">
+<img src="mx/photo_3.jpg" width="31%" style="margin: 1%">
 </section>
 
 
