--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<a href="#Personnages" style="width: 18%;">Personnages</a>
 	<a href="#Localisations" style="width: 18%;">Localisations</a>
 	<a href="#Alentours" style="width: 18%;">Alentours</a>
-	<a href="#Vues" style="width: 21%;">Les meilleures vues sur Aubétoile</a>
+	<a href="#Vues" style="width: 21%;">Les meilleures vues sur la ville</a>
 </nav>
 
 
