--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Le Ville d'Aubétoile</title>
   	<link rel="stylesheet" href="mx/styles.css">
   	<style>
-  		body {background-color:#DCD0FF;}
+  		body {background-color:#DCD0FFB0;}
   	</style>
 </head>
 <body>
