--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Le Ville d'Aubétoile</title>
   	<link rel="stylesheet" href="mx/styles.css">
   	<style>
-  		body {background-color:#afafafcc;}
+  		body {background-color:#DCD0FF;}
   	</style>
 </head>
 <body>
@@ -13,15 +13,16 @@
 <header>
 <img src="mx/aubétoile_tête.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
 <hr>
-<h1 style="text-align: center;">Le Ville d'Aubétoile</h1>
-<nav>
-	<a href="#Histoire" style="width: 18%;">Histoire</a>
-	<a href="#Personnages" style="width: 18%;">Personnages</a>
-	<a href="#Localisations" style="width: 18%;">Localisations</a>
-	<a href="#Alentours" style="width: 18%;">Alentours</a>
-	<a href="#Vues" style="width: 21%;">Les meilleures vues sur la ville</a>
-</nav>
-
+<h1 style="text-align: center; font-size: 350%;">Le Ville d'Aubétoile</h1>
+<section style="width: 95%; margin: 0 auto;">
+	<nav>
+		<a class="button" href="#Histoire" style="width: 19%;">Histoire</a>
+		<a href="#Personnages" style="width: 19%;">Personnages</a>
+		<a href="#Localisations" style="width: 19%;">Localisations</a>
+		<a href="#Alentours" style="width: 19%;">Alentours</a>
+		<a href="#Vues" style="width: 20%;">Les meilleures vues sur la ville</a>
+	</nav>
+</section>
 
 
 
@@ -31,16 +32,16 @@
 <main>
 <hr>
 <!--                             HISTOIRE                              -->
-<section id="sectionfloat">
+<section>
 	<h3 id="Histoire">Histoire</h3>
-<span style="overflow: scroll;width: 45%;height: 300px;background-color: #fff20052;">
+<span style="overflow: scroll;width: 45%;height: 300px;background-color: #fff20069;"  id="sectionfloat">
 <p style="width: 85%; padding: 0% 7%;">Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
 <p style="width: 85%; padding: 0% 7%;">Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
 <p style="width: 85%; padding: 0% 7%;">Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
 </span>
-<figure style="width: 18%">
+<figure style="width: 15%; border: outset; padding: 1%; background-color:#bfbfbf; margin: 2%;"  id="sectionfloat">
 	<img src="mx/book1.png" alt="book" title="book" width="95%">
-	<figcaption>Guide de poche de l'Empire, <br>
+	<figcaption style="font-size: 75%">Guide de poche de l'Empire, <br>
 	Troisième édition: Bordeciel</figcaption>
 </figure>
 
