--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Le Ville d'Aubétoile</title>
   	<link rel="stylesheet" href="mx/styles.css">
   	<style>
-  		body {background-color:#DCD0FF;}
+  		body {background-color:#dcdcdc;}
   	</style>
 </head>
 <body>
@@ -20,7 +20,7 @@
 		<a href="#Personnages" style="width: 19%;">Personnages</a>
 		<a href="#Localisations" style="width: 19%;">Localisations</a>
 		<a href="#Alentours" style="width: 19%;">Alentours</a>
-		<a href="#Vues" style="width: 20%;">Les meilleures vues sur la ville</a>
+		<a href="#Vues" style="width: 21%;">Les meilleures vues sur la ville</a>
 	</nav>
 </section>
 
