--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 <hr>
 <!--                             HISTOIRE                              -->
 <section>
-	<h3 id="Histoire">Histoire</h3>
-<span style="overflow: scroll;width: 45%;height: 300px;background-color: #fff20049;"  id="sectionfloat">
+	<h2 id="Histoire">Histoire</h2>
+<span style="overflow: scroll;width: 45%;height: 300px;background-color: #fff20049;">
 <p style="width: 85%; padding: 0% 7%;">Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
 <p style="width: 85%; padding: 0% 7%;">Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
 <p style="width: 85%; padding: 0% 7%;">Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
 </span>
-<figure style="width: 15%; border: outset; padding: 1%; background-color:#bfbfbf; margin: 2%;"  id="sectionfloat">
+<figure style="width: 15%; border: outset; padding: 1%; background-color:#bfbfbf; margin: 2%;">
 	<img src="mx/book1.png" alt="book" title="book" width="95%">
 	<figcaption style="font-size: 75%">Guide de poche de l'Empire, <br>
 	Troisième édition: Bordeciel</figcaption>
@@ -51,26 +51,101 @@
 <hr>
 <!--                             LOCALISATIONS                              -->
 <section>
-	<h3 id="Localisations">Localisations</h3>
-<p>
-	
+	<h2 id="Localisations">Localisations</h2>
+<p></p>
 
-</p>
+<span id="spanborder">
+	<h3>Auberges</h5>
+	<ul>
+		<li>Auberge Montvent</li>
+	</ul>
+</span>
+<span id="spanborder">
+	<h3>Commerces</h5>
+	<ul>
+		<li>La Panacée</li>
+		<li>Maison de Rustleif</li>
+	</ul>
+</span>
+<span id="spanborder">
+	<h3>Maisons</h5>
+	<ul>
+		<li>Maison d'Irgnir</li>
+		<li>Maison de Beitild</li>
+		<li>Maison de Brina</li>
+		<li>Maison de Fruki</li>
+		<li>Maison de Leigelf</li>
+		<li>Maison de Silus Vésuius</li>
+	</ul>
+</span>
+<span id="spanborder">
+	<h3>Résidence du jarl</h5>
+	<ul>
+		<li>Le pavillon blanc</li>
+	</ul>
+</span>
+<span id="spanborder">
+	<h3>Mines</h5>
+	<ul>
+		<li>Mine de Brise-Fer</li>
+		<li>Mine de Vif-Argent</li>
+	</ul>
+</span>
+<span id="spanborder">
+	<h3>Autres</h5>
+	<ul>
+		<li>Baraquements d'Aubétoile</li>
+		<li>Le Bourrasque</li>
+	</ul>
+</span>
+
 </section>
 
 
 <hr>
 <!--                             PERSONNAGES                              -->
 <section>
-	<h3 id="Personnages">Personnages</h3>
+	<h2 id="Personnages">Personnages</h2>
 <p></p>
+
+
+<table style="display: none;">
+	<thead>
+		<tr>
+			<td>Name</td>
+			<td>Gender</td>
+			<td>Age</td>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>David</td>
+			<td>Male</td>
+			<td>23</td>
+		</tr>
+		<tr>
+			<td>Jessica</td>
+			<td>Female</td>
+			<td>47</td>
+		</tr>
+		<tr>
+			<td>Warren</td>
+			<td>Male</td>
+			<td>12</td>
+		</tr>
+	</tbody>
+</table>
+
+
+
+
 </section>
 
 
 <hr>
 <!--                             ALENTOURS                              -->
 <section>
-	<h3 id="Alentours">Alentours</h3>
+	<h2 id="Alentours">Alentours</h2>
 <p></p>
 </section>
 
@@ -78,7 +153,7 @@
 <hr>
 <!--                             VUES                              -->
 <section>
-	<h3 id="Vues">Les meilleures vues sur Aubétoile</h3>
+	<h2 id="Vues">Les meilleures vues sur Aubétoile</h2>
 <p></p>
 
 <img src="mx/photo_1.jpg" width="31%" style="margin: 1%">
