--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
 
 
-<figure style="width: 50%; border: outset; padding: 1%; background-color:#bfbfbf; margin: 0% 1% 2% 0%; float: left;">
-	<img src="mx/map_2.png" alt="book" title="book" width="100%">
+<figure style="width: 49%; border: outset; padding: 1%; background-color:#bfbfbf; margin: 0% 1% 2% 0%; float: left;">
+	<img src="mx/map_2.png" alt="book" title="La carte de la ville" width="100%">
 </figure>
 
 
@@ -83,14 +83,14 @@
 						<li>Maison de Silus Vésuius</li>
 					</ul>
 				</span>
-<span id="css_localisations_span">
+<span id="css_localisations_span" style="height: 232px;">
 					<h3>Gouvernement</h5>
 					<ul>
 						<li>Le pavillon blanc - résidence du jarl</li>
 						<li>Baraquements d'Aubétoile</li>
 					</ul>
 				</span>
-<span id="css_localisations_span">
+<span id="css_localisations_span" style="height: 232px;">
 					<h3>Autres</h5>
 					<ul>
 						<li>Mine de Brise-Fer</li>
