--- a/index.html
+++ b/index.html
@@ -4,25 +4,23 @@
   <meta charset = "UTF-8">
   <title>Le Ville d'Aubétoile</title>
   	<link rel="stylesheet" href="mx/styles.css">
-  	<style>
-  		body {background-color:#dcdcdc;}
-  	</style>
 </head>
 <body>
 <!--                   HEADER                    -->
 <header>
 <img src="mx/aubétoile_tête.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
 <hr>
-<h1 style="text-align: center; font-size: 350%;">Le Ville d'Aubétoile</h1>
-<section style="width: 95%; margin: 0 auto;">
+<h1>Le Ville d'Aubétoile</h1>
+<section class="nav">
 	<nav>
-		<a class="button" href="#Histoire" style="width: 18%;">Histoire</a>
-		<a href="#Personnages" style="width: 18%;">Personnages</a>
-		<a href="#Localisations" style="width: 18%;">Localisations</a>
-		<a href="#Alentours" style="width: 18%;">Alentours</a>
-		<a href="#Vues" style="width: 22%;">Les meilleures vues sur la ville</a>
+		<a href="#nav_histoire" style="width: 18%;">Histoire</a>
+		<a href="#nav_localisations" style="width: 18%;">Localisations</a>
+		<a href="#nav_personnages" style="width: 18%;">Personnages</a>
+		<a href="#nav_alentours" style="width: 18%;">Alentours</a>
+		<a href="#nav_vues" style="width: 22%;">Les meilleures vues sur la ville</a>
 	</nav>
 </section>
+
 
 
 
@@ -32,39 +30,35 @@
 <main>
 <hr>
 <!--                             HISTOIRE                              -->
-<section>
-	<h2 id="Histoire">Histoire</h2>
-<span style="overflow: auto;width: 40%;height: 300px;background-color: #fff20049;">
-<p style="width: 85%; padding: 0% 7%;">Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
-<p style="width: 85%; padding: 0% 7%;">Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
-<p style="width: 85%; padding: 0% 7%;">Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
+<section class="histoire">
+	<h2 id="nav_histoire">Histoire</h2>
+<span class="histoire">
+<p class="histoire">Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
+<p class="histoire">Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
+<p class="histoire">Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
 </span>
-<figure style="width: 15%; border: outset; padding: 1%; background-color:#bfbfbf; margin: 2%;">
+<figure class="histoire">
 	<img src="mx/book_1.png" alt="book" title="book" width="95%">
 	<figcaption style="font-size: 75%">Guide de poche de l'Empire, <br>
 	Troisième édition: Bordeciel</figcaption>
 </figure>
-
 </section>
+
+
 
 
 <hr>
 <!--                             LOCALISATIONS                              -->
-<section>
-	<h2 id="Localisations">Localisations</h2>
-<p></p>
-
-
-
-
+<section class="localisations">
+	<h2 id="nav_localisations">Localisations</h2>
 <figure style="width: 49%; border: outset; padding: 1%; background-color:#bfbfbf; margin: 0% 1% 2% 0%; float: left;">
-	<img src="mx/map_2.png" alt="book" title="La carte de la ville" width="100%">
+	<img src="mx/map_2.png" alt="La carte de la ville" title="La carte de la ville" width="100%">
 </figure>
 
 
 
 
-<span id="css_localisations_span">
+<span class="localisations">
 					<h3>Services</h5>
 					<ul>
 						<li>Auberge Montvent</li>
@@ -72,7 +66,7 @@
 						<li>Maison de Rustleif</li>
 					</ul>
 				</span>
-<span id="css_localisations_span">
+<span class="localisations">
 					<h3>Maisons</h5>
 					<ul>
 						<li>Maison d'Irgnir</li>
@@ -83,14 +77,14 @@
 						<li>Maison de Silus Vésuius</li>
 					</ul>
 				</span>
-<span id="css_localisations_span" style="height: 232px;">
+<span class="localisations" style="height: 220px; margin: 3px 3px 10px 3px;">
 					<h3>Gouvernement</h5>
 					<ul>
 						<li>Le pavillon blanc - résidence du jarl</li>
 						<li>Baraquements d'Aubétoile</li>
 					</ul>
 				</span>
-<span id="css_localisations_span" style="height: 232px;">
+<span class="localisations" style="height: 220px; margin: 3px 3px 10px 3px;">
 					<h3>Autres</h5>
 					<ul>
 						<li>Mine de Brise-Fer</li>
@@ -135,7 +129,7 @@
 <hr>
 <!--                             PERSONNAGES                              -->
 <section>
-	<h2 id="Personnages">Personnages</h2>
+	<h2 id="nav_personnages">Personnages</h2>
 <p></p>
 
 
@@ -175,7 +169,7 @@
 <hr>
 <!--                             ALENTOURS                              -->
 <section>
-	<h2 id="Alentours">Alentours</h2>
+	<h2 id="nav_alentours">Alentours</h2>
 <p></p>
 </section>
 
@@ -183,7 +177,7 @@
 <hr>
 <!--                             VUES                              -->
 <section>
-	<h2 id="Vues">Les meilleures vues sur Aubétoile</h2>
+	<h2 id="nav_vues">Les meilleures vues sur Aubétoile</h2>
 <p></p>
 
 <img src="mx/photo_1.jpg" width="31%" style="margin: 1%">
