--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 
 
 
+
+
+
+
+
 </header>
 <!--                   MAIN                    -->
 <main>
@@ -47,17 +52,20 @@
 
 
 
+
+
+
+
+
+
+
 <hr>
 <!--                             LOCALISATIONS                              -->
 <section class="localisations">
 	<h2 id="nav_localisations">Localisations</h2>
-<figure style="width: 49%; border: outset; padding: 1%; background-color:#bfbfbf; margin: 0% 1% 2% 0%; float: left;">
+<figure style="width: 49%; border: outset; padding: 1%; margin: 0% 1% 2% 0%;">
 	<img src="mx/map_2.png" alt="La carte de la ville" title="La carte de la ville" width="100%">
 </figure>
-
-
-
-
 <span class="localisations">
 					<h3>Services</h5>
 					<ul>
@@ -77,14 +85,14 @@
 						<li>Maison de Silus Vésuius</li>
 					</ul>
 				</span>
-<span class="localisations" style="height: 220px; margin: 3px 3px 10px 3px;">
+<span class="localisations" style="height: 220px; margin-bottom: 10px">
 					<h3>Gouvernement</h5>
 					<ul>
 						<li>Le pavillon blanc - résidence du jarl</li>
 						<li>Baraquements d'Aubétoile</li>
 					</ul>
 				</span>
-<span class="localisations" style="height: 220px; margin: 3px 3px 10px 3px;">
+<span class="localisations" style="height: 220px; margin-bottom: 10px">
 					<h3>Autres</h5>
 					<ul>
 						<li>Mine de Brise-Fer</li>
@@ -92,70 +100,52 @@
 						<li>Le Bourrasque</li>
 					</ul>
 				</span>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </section>
+
+
+
+
+
+
+
+
+
+
 
 
 <hr>
 <!--                             PERSONNAGES                              -->
 <section>
 	<h2 id="nav_personnages">Personnages</h2>
-<p></p>
 
-
-<table style="display: none;">
+<table>
 	<thead>
 		<tr>
-			<td>Name</td>
-			<td>Gender</td>
-			<td>Age</td>
+			<td>Le Nom</td>
+			<td>L'Occupation</td>
+			<td>Maison</td>
 		</tr>
 	</thead>
 	<tbody>
 		<tr>
-			<td>David</td>
-			<td>Male</td>
-			<td>23</td>
+			<td>Abélone</td>
+			<td>Servante à l'auberge Montvent</td>
+			<td>Auberge Montvent</td>
 		</tr>
 		<tr>
-			<td>Jessica</td>
-			<td>Female</td>
-			<td>47</td>
+			<td>Alding</td>
+			<td>Pirate des Horqueurs sanguinaires</td>
+			<td>Auberge Montvent</td>
 		</tr>
 		<tr>
-			<td>Warren</td>
-			<td>Male</td>
-			<td>12</td>
+			<td>Alésan</td>
+			<td>Enfant orphelin, livre de la nourriture aux mineurs</td>
+			<td>Auberge Montvent</td>
+		</tr>
+		<tr>
+			<td>Beitild</td>
+			<td>Propriétaire de la mine de Brise-Fer</td>
+			<td>Maison de Beitild</td>
 		</tr>
 	</tbody>
 </table>
@@ -166,12 +156,34 @@
 </section>
 
 
+
+
+
+
+
+
+
+
+
+
 <hr>
 <!--                             ALENTOURS                              -->
 <section>
 	<h2 id="nav_alentours">Alentours</h2>
 <p></p>
 </section>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <hr>
