--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <!--                   HEADER                    -->
 <header>
-<img src="mx/aubétoile_tête.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
+<img src="mx/aubetoile_tete.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
 <hr>
 <h1>Le Ville d'Aubétoile</h1>
 <section class="nav">
@@ -64,7 +64,7 @@
 <section class="localisations">
 	<h2 id="nav_localisations">Localisations</h2>
 <figure style="width: 49%; border: outset; padding: 1%; margin: 0% 1% 2% 0%;">
-	<img src="mx/map_2.png" alt="La carte de la ville" title="La carte de la ville" width="100%">
+	<img src="mx/map_2.jpg" alt="La carte de la ville" title="La carte de la ville" width="100%">
 </figure>
 <span class="localisations">
 					<h3>Services</h5>
@@ -192,9 +192,12 @@
 	<h2 id="nav_vues">Les meilleures vues sur Aubétoile</h2>
 <p></p>
 
-<img src="mx/photo_1.jpg" width="31%" style="margin: 1%">
-<img src="mx/photo_2.jpg" width="31%" style="margin: 1%">
-<img src="mx/photo_3.jpg" width="31%" style="margin: 1%">
+<img src="mx/aubetoile_1.jpg" width="46%" style="margin: 1%">
+<img src="mx/aubetoile_2.jpg" width="46%" style="margin: 1%">
+<img src="mx/aubetoile_3.jpg" width="46%" style="margin: 1%">
+<img src="mx/aubetoile_4.jpg" width="46%" style="margin: 1%">
+<img src="mx/aubetoile_5.jpg" width="46%" style="margin: 1%">
+<img src="mx/aubetoile_6.jpg" width="46%" style="margin: 1%">
 </section>
 
 
