--- a/index.html
+++ b/index.html
@@ -147,6 +147,26 @@
 			<td>Propriétaire de la mine de Brise-Fer</td>
 			<td>Maison de Beitild</td>
 		</tr>
+		<tr>
+			<td>Bodil</td>
+			<td>Mineur</td>
+			<td>Mine de Brise-Fer</td>
+		</tr>
+		<tr>
+			<td>Borgny</td>
+			<td>Mineur</td>
+			<td>Mine de Vif-Argent</td>
+		</tr>
+		<tr>
+			<td>Brina Mérilis</td>
+			<td>Membre de la Légion impériale</td>
+			<td>Maison de Brina</td>
+		</tr>
+		<tr>
+			<td>Bulfrek</td>
+			<td>Servant du jarl</td>
+			<td>Le pavillon blanc</td>
+		</tr>
 	</tbody>
 </table>
 
