--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
   <meta charset = "UTF-8">
-  <title>Le Ville d'Aubétoile</title>
+  <title>La Ville d'Aubétoile</title>
   	<link rel="stylesheet" href="mx/styles.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
 <header>
 <img src="mx/aubetoile_tete.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
 <hr>
-<h1>Le Ville d'Aubétoile</h1>
+<h1>La Ville d'Aubétoile</h1>
 <section class="nav">
 	<nav>
 		<a href="#nav_histoire" style="width: 18%;">Histoire</a>
@@ -38,13 +38,18 @@
 <section class="histoire">
 	<h2 id="nav_histoire">Histoire</h2>
 <span class="histoire">
+<p class="histoire">La date de construction d'Aubétoile est inconnue, mais elle existe depuis au moins 1E 2920, comme mentionné dans le "2920, vol. 10 - Soufflegivre".</p>
 <p class="histoire">Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
 <p class="histoire">Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
 <p class="histoire">Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
 </span>
 <figure class="histoire">
-	<img src="mx/book_1.png" alt="book" title="book" width="95%">
-	<figcaption style="font-size: 75%">Guide de poche de l'Empire, <br>
+	<img src="mx/livre_1.png" alt="Livre: 2920, vol. 10 - Soufflegivre" title="2920, vol. 10 - Soufflegivre" width="95%">
+	<figcaption>2920, vol. 10 - Soufflegivre</figcaption>
+</figure>
+<figure class="histoire">
+	<img src="mx/livre_2.png" alt="Livre: Guide de poche de l'Empire" title="Guide de poche de l'Empire" width="95%">
+	<figcaption>Guide de poche de l'Empire, <br>
 	Troisième édition: Bordeciel</figcaption>
 </figure>
 </section>
@@ -64,7 +69,7 @@
 <section class="localisations">
 	<h2 id="nav_localisations">Localisations</h2>
 <figure style="width: 49%; border: outset; padding: 1%; margin: 0% 1% 2% 0%;">
-	<img src="mx/map_2.jpg" alt="La carte de la ville" title="La carte de la ville" width="100%">
+	<img src="mx/carte_2.jpg" alt="La carte de la ville" title="La carte de la ville" width="100%">
 </figure>
 <span class="localisations">
 					<h3>Services</h5>
