--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!--                             LOCALISATIONS                              -->
 <section class="localisations">
 	<h2 id="nav_localisations">Localisations</h2>
-<figure style="width: 49%; border: outset; padding: 1%; margin: 0% 1% 2% 0%;">
+<figure class="localisations" style="width: 49%; border: outset; padding: 1%; margin: 0% 1% 2% 0%;">
 	<img src="mx/carte_2.jpg" alt="La carte de la ville" title="La carte de la ville" width="100%">
 </figure>
 <span class="localisations">
@@ -144,7 +144,7 @@
 		</tr>
 		<tr>
 			<td>Alésan</td>
-			<td>Enfant orphelin, livre de la nourriture aux mineurs</td>
+			<td>Enfant, livre de la nourriture aux mineurs</td>
 			<td>Auberge Montvent</td>
 		</tr>
 		<tr>
@@ -154,7 +154,7 @@
 		</tr>
 		<tr>
 			<td>Bodil</td>
-			<td>Mineur</td>
+			<td>Mineure</td>
 			<td>Mine de Brise-Fer</td>
 		</tr>
 		<tr>
@@ -171,6 +171,46 @@
 			<td>Bulfrek</td>
 			<td>Servant du jarl</td>
 			<td>Le pavillon blanc</td>
+		</tr>
+		<tr>
+			<td>Capitaine Nautonier</td>
+			<td>Capitaine du Bourrasque</td>
+			<td>Bourrasque</td>
+		</tr>
+		<tr>
+			<td>Édith</td>
+			<td>Mineure</td>
+			<td>Mine de Vif-Argent</td>
+		</tr>
+		<tr>
+			<td>Érandur</td>
+			<td>Prêtre de Mara</td>
+			<td>Auberge Montvent</td>
+		</tr>
+		<tr>
+			<td>Frida</td>
+			<td>Alchimiste et propriétaire de la Panacée</td>
+			<td>La Panacée</td>
+		</tr>
+		<tr>
+			<td>Frorkmar Terne-Bannière</td>
+			<td>Commandant sombrage du Clos</td>
+			<td>Le pavillon blanc</td>
+		</tr>
+		<tr>
+			<td>Fruki</td>
+			<td>Mineure</td>
+			<td>Maison de Fruki</td>
+		</tr>
+		<tr>
+			<td>Gjak</td>
+			<td>Mineur</td>
+			<td>Mine de Brise-Fer</td>
+		</tr>
+		<tr>
+			<td>Gjuk</td>
+			<td>Pirate des Horqueurs sanguinaires</td>
+			<td>Auberge Montvent</td>
 		</tr>
 	</tbody>
 </table>
@@ -217,12 +257,12 @@
 	<h2 id="nav_vues">Les meilleures vues sur Aubétoile</h2>
 <p></p>
 
-<img src="mx/aubetoile_1.jpg" width="46%" style="margin: 1%">
-<img src="mx/aubetoile_2.jpg" width="46%" style="margin: 1%">
-<img src="mx/aubetoile_3.jpg" width="46%" style="margin: 1%">
-<img src="mx/aubetoile_4.jpg" width="46%" style="margin: 1%">
-<img src="mx/aubetoile_5.jpg" width="46%" style="margin: 1%">
-<img src="mx/aubetoile_6.jpg" width="46%" style="margin: 1%">
+<img src="mx/aubetoile_1.jpg" alt="Aubétoile" width="46%" style="margin: 1%">
+<img src="mx/aubetoile_2.jpg" alt="Aubétoile" width="46%" style="margin: 1%">
+<img src="mx/aubetoile_3.jpg" alt="Aubétoile" width="46%" style="margin: 1%">
+<img src="mx/aubetoile_4.jpg" alt="Aubétoile" width="46%" style="margin: 1%">
+<img src="mx/aubetoile_5.jpg" alt="Aubétoile" width="46%" style="margin: 1%">
+<img src="mx/aubetoile_6.jpg" alt="Aubétoile" width="46%" style="margin: 1%">
 </section>
 
 
