--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		</tr>
 		<tr>
 			<td>Alésan</td>
-			<td>Enfant, livre de la nourriture aux mineurs</td>
+			<td>Enfant orphelin</td>
 			<td>Auberge Montvent</td>
 		</tr>
 		<tr>
@@ -189,7 +189,7 @@
 		</tr>
 		<tr>
 			<td>Frida</td>
-			<td>Alchimiste et propriétaire de la Panacée</td>
+			<td>Alchimiste et propr. de la Panacée</td>
 			<td>La Panacée</td>
 		</tr>
 		<tr>
@@ -212,6 +212,64 @@
 			<td>Pirate des Horqueurs sanguinaires</td>
 			<td>Auberge Montvent</td>
 		</tr>
+		<tr>
+			<td>Guthrum</td>
+			<td>Marin</td>
+			<td>Le Bourrasque</td>
+		</tr>
+	</tbody>
+</table>
+
+
+
+<table>
+	<thead>
+		<tr>
+			<td>Le Nom</td>
+			<td>L'Occupation</td>
+			<td>Maison</td>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Harlaug</td>
+			<td>Navigateur</td>
+			<td>le bateau en baie</td>
+		</tr>
+		<tr>
+			<td>Horik Mi-Main</td>
+			<td>Garde du corps de Brina Mérilis</td>
+			<td>Maison de Brina</td>
+		</tr>
+		<tr>
+			<td>Irgnir</td>
+			<td>Mineur</td>
+			<td>Maison d'Irgnir</td>
+		</tr>
+		<tr>
+			<td>Irlof</td>
+			<td>Pirate des Horqueurs sanguinaires</td>
+			<td>Auberge Montvent</td>
+		</tr>
+		<tr>
+			<td>Jod</td>
+			<td>Huscarl du jarl Skald l'Aîné</td>
+			<td>Le pavillon blanc</td>
+		</tr>
+		<tr>
+			<td>Karita</td>
+			<td>Barde de l'auberge Montvent</td>
+			<td>Auberge Montvent</td>
+		</tr>
+
+
+
+
+
+
+
+
+
 	</tbody>
 </table>
 
@@ -257,12 +315,12 @@
 	<h2 id="nav_vues">Les meilleures vues sur Aubétoile</h2>
 <p></p>
 
-<img src="mx/aubetoile_1.jpg" alt="Aubétoile" width="46%" style="margin: 1%">
-<img src="mx/aubetoile_2.jpg" alt="Aubétoile" width="46%" style="margin: 1%">
-<img src="mx/aubetoile_3.jpg" alt="Aubétoile" width="46%" style="margin: 1%">
-<img src="mx/aubetoile_4.jpg" alt="Aubétoile" width="46%" style="margin: 1%">
-<img src="mx/aubetoile_5.jpg" alt="Aubétoile" width="46%" style="margin: 1%">
-<img src="mx/aubetoile_6.jpg" alt="Aubétoile" width="46%" style="margin: 1%">
+<img class ="vues" src="mx/aubetoile_1.jpg" alt="Aubétoile">
+<img class ="vues" src="mx/aubetoile_2.jpg" alt="Aubétoile">
+<img class ="vues" src="mx/aubetoile_3.jpg" alt="Aubétoile">
+<img class ="vues" src="mx/aubetoile_4.jpg" alt="Aubétoile">
+<img class ="vues" src="mx/aubetoile_5.jpg" alt="Aubétoile">
+<img class ="vues" src="mx/aubetoile_6.jpg" alt="Aubétoile">
 </section>
 
 
@@ -271,12 +329,13 @@
 <!--                   FOOTER                    -->
 <footer>
 
-
+<div>
  <address>
 Trier 50000<br>
 DE
  </address>
    &copy; 2021 by **<br>
+</div>
 </footer>
 </body>
 </html>
