--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
   	<link rel="stylesheet" href="mx/styles.css">
 </head>
 <body>
+
+
+
+
+
+<!--                   PANEL                    -->
+
+<div class="panel">
+	<img src="mx/panel.png" width="10%">
+</div>
+
+
+
+
+
 <!--                   HEADER                    -->
 <header>
-<img src="mx/aubetoile_tete.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
+<img src="mx/aubetoile_tete.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile" style="visibility:hidden;">
 <hr>
-<h1>La Ville d'Aubétoile</h1>
+<div>
+	<h1>La Ville d'Aubétoile</h1>
+</div>
 <section class="nav">
 	<nav>
 		<a href="#nav_histoire" style="width: 18%;">Histoire</a>
