--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!--                   HEADER                    -->
 <header>
-<img src="mx/aubetoile_tete.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile" style="visibility:hidden;">
+<img src="mx/aubetoile_tete.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
 <hr>
 <div>
 	<h1>La Ville d'Aubétoile</h1>
