--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
 <!--                   PANEL                    -->
 
 <div class="panel">
-	<img src="mx/panel.png" width="10%">
+	<img src="mx/panel.png" width="95%">
+
+		<a href="#nav_histoire" style="widt: 18%;">Histoire</a>
+		<a href="#nav_localisations" style="widt: 18%;">Localisations</a>
+		<a href="#nav_personnages" style="widt: 18%;">Personnages</a>
+		<a href="#nav_alentours" style="widt: 18%;">Alentours</a>
+		<a href="#nav_vues" style="widt: 22%;">Les meilleures vues sur la ville</a>
+
 </div>
-
-
 
 
 
 <!--                   HEADER                    -->
 <header>
-<img src="mx/aubetoile_tete.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
+<img class= "header_image" src="mx/aubetoile_tete.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
 <hr>
 <div>
 	<h1>La Ville d'Aubétoile</h1>
