--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
   <meta charset = "UTF-8">
-  <title>La Ville d'Aubétoile</title>
+  <title>Le Clos</title>
   	<link rel="stylesheet" href="mx/styles.css">
 </head>
 <body>
@@ -13,40 +13,18 @@
 
 <!--                   PANEL                    -->
 
-<div class="panel">
-	<img src="mx/panel.png" width="95%">
 
-		<a href="#nav_histoire" style="widt: 18%;">Histoire</a>
-		<a href="#nav_localisations" style="widt: 18%;">Localisations</a>
-		<a href="#nav_personnages" style="widt: 18%;">Personnages</a>
-		<a href="#nav_alentours" style="widt: 18%;">Alentours</a>
-		<a href="#nav_vues" style="widt: 22%;">Les meilleures vues sur la ville</a>
-
-</div>
 
 
 
 <!--                   HEADER                    -->
 <header>
-<img class= "header_image" src="mx/aubetoile_tete.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
-<hr>
 <div>
-	<h1>La Ville d'Aubétoile</h1>
+	<h1>Le Clos</h1>
 </div>
-<section class="nav">
-	<nav>
-		<a href="#nav_histoire" style="width: 18%;">Histoire</a>
-		<a href="#nav_localisations" style="width: 18%;">Localisations</a>
-		<a href="#nav_personnages" style="width: 18%;">Personnages</a>
-		<a href="#nav_alentours" style="width: 18%;">Alentours</a>
-		<a href="#nav_vues" style="width: 22%;">Les meilleures vues sur la ville</a>
-	</nav>
-</section>
 
 
-
-
-
+<a href="aubetoile.html">Aubétoile</a>
 
 
 
@@ -56,298 +34,17 @@
 <!--                   MAIN                    -->
 <main>
 <hr>
-<!--                             HISTOIRE                              -->
-<section class="histoire">
-	<h2 id="nav_histoire">Histoire</h2>
-<span class="histoire">
-<p class="histoire">La date de construction d'Aubétoile est inconnue, mais elle existe depuis au moins 1E 2920, comme mentionné dans le "2920, vol. 10 - Soufflegivre".</p>
-<p class="histoire">Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
-<p class="histoire">Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
-<p class="histoire">Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
-</span>
-<figure class="histoire">
-	<img src="mx/livre_1.png" alt="Livre: 2920, vol. 10 - Soufflegivre" title="2920, vol. 10 - Soufflegivre" width="95%">
-	<figcaption>2920, vol. 10 - Soufflegivre</figcaption>
-</figure>
-<figure class="histoire">
-	<img src="mx/livre_2.png" alt="Livre: Guide de poche de l'Empire" title="Guide de poche de l'Empire" width="95%">
-	<figcaption>Guide de poche de l'Empire, <br>
-	Troisième édition: Bordeciel</figcaption>
-</figure>
-</section>
-
-
-
-
-
-
-
-
-
-
-
-<hr>
-<!--                             LOCALISATIONS                              -->
-<section class="localisations">
-	<h2 id="nav_localisations">Localisations</h2>
-<figure class="localisations" style="width: 49%; border: outset; padding: 1%; margin: 0% 1% 2% 0%;">
-	<img src="mx/carte_2.jpg" alt="La carte de la ville" title="La carte de la ville" width="100%">
-</figure>
-<span class="localisations">
-					<h3>Services</h5>
-					<ul>
-						<li>Auberge Montvent</li>
-						<li>La Panacée</li>
-						<li>Maison de Rustleif</li>
-					</ul>
-				</span>
-<span class="localisations">
-					<h3>Maisons</h5>
-					<ul>
-						<li>Maison d'Irgnir</li>
-						<li>Maison de Beitild</li>
-						<li>Maison de Brina</li>
-						<li>Maison de Fruki</li>
-						<li>Maison de Leigelf</li>
-						<li>Maison de Silus Vésuius</li>
-					</ul>
-				</span>
-<span class="localisations" style="height: 220px; margin-bottom: 10px">
-					<h3>Gouvernement</h5>
-					<ul>
-						<li>Le pavillon blanc - résidence du jarl</li>
-						<li>Baraquements d'Aubétoile</li>
-					</ul>
-				</span>
-<span class="localisations" style="height: 220px; margin-bottom: 10px">
-					<h3>Autres</h5>
-					<ul>
-						<li>Mine de Brise-Fer</li>
-						<li>Mine de Vif-Argent</li>
-						<li>Le Bourrasque</li>
-					</ul>
-				</span>
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
-<hr>
-<!--                             PERSONNAGES                              -->
+<!--                             H                              -->
 <section>
-	<h2 id="nav_personnages">Personnages</h2>
-
-<table>
-	<thead>
-		<tr>
-			<td>Le Nom</td>
-			<td>L'Occupation</td>
-			<td>Maison</td>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>Abélone</td>
-			<td>Servante à l'auberge Montvent</td>
-			<td>Auberge Montvent</td>
-		</tr>
-		<tr>
-			<td>Alding</td>
-			<td>Pirate des Horqueurs sanguinaires</td>
-			<td>Auberge Montvent</td>
-		</tr>
-		<tr>
-			<td>Alésan</td>
-			<td>Enfant orphelin</td>
-			<td>Auberge Montvent</td>
-		</tr>
-		<tr>
-			<td>Beitild</td>
-			<td>Propriétaire de la mine de Brise-Fer</td>
-			<td>Maison de Beitild</td>
-		</tr>
-		<tr>
-			<td>Bodil</td>
-			<td>Mineure</td>
-			<td>Mine de Brise-Fer</td>
-		</tr>
-		<tr>
-			<td>Borgny</td>
-			<td>Mineur</td>
-			<td>Mine de Vif-Argent</td>
-		</tr>
-		<tr>
-			<td>Brina Mérilis</td>
-			<td>Membre de la Légion impériale</td>
-			<td>Maison de Brina</td>
-		</tr>
-		<tr>
-			<td>Bulfrek</td>
-			<td>Servant du jarl</td>
-			<td>Le pavillon blanc</td>
-		</tr>
-		<tr>
-			<td>Capitaine Nautonier</td>
-			<td>Capitaine du Bourrasque</td>
-			<td>Bourrasque</td>
-		</tr>
-		<tr>
-			<td>Édith</td>
-			<td>Mineure</td>
-			<td>Mine de Vif-Argent</td>
-		</tr>
-		<tr>
-			<td>Érandur</td>
-			<td>Prêtre de Mara</td>
-			<td>Auberge Montvent</td>
-		</tr>
-		<tr>
-			<td>Frida</td>
-			<td>Alchimiste et propr. de la Panacée</td>
-			<td>La Panacée</td>
-		</tr>
-		<tr>
-			<td>Frorkmar Terne-Bannière</td>
-			<td>Commandant sombrage du Clos</td>
-			<td>Le pavillon blanc</td>
-		</tr>
-		<tr>
-			<td>Fruki</td>
-			<td>Mineure</td>
-			<td>Maison de Fruki</td>
-		</tr>
-		<tr>
-			<td>Gjak</td>
-			<td>Mineur</td>
-			<td>Mine de Brise-Fer</td>
-		</tr>
-		<tr>
-			<td>Gjuk</td>
-			<td>Pirate des Horqueurs sanguinaires</td>
-			<td>Auberge Montvent</td>
-		</tr>
-		<tr>
-			<td>Guthrum</td>
-			<td>Marin</td>
-			<td>Le Bourrasque</td>
-		</tr>
-	</tbody>
-</table>
-
-
-
-<table>
-	<thead>
-		<tr>
-			<td>Le Nom</td>
-			<td>L'Occupation</td>
-			<td>Maison</td>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>Harlaug</td>
-			<td>Navigateur</td>
-			<td>le bateau en baie</td>
-		</tr>
-		<tr>
-			<td>Horik Mi-Main</td>
-			<td>Garde du corps de Brina Mérilis</td>
-			<td>Maison de Brina</td>
-		</tr>
-		<tr>
-			<td>Irgnir</td>
-			<td>Mineur</td>
-			<td>Maison d'Irgnir</td>
-		</tr>
-		<tr>
-			<td>Irlof</td>
-			<td>Pirate des Horqueurs sanguinaires</td>
-			<td>Auberge Montvent</td>
-		</tr>
-		<tr>
-			<td>Jod</td>
-			<td>Huscarl du jarl Skald l'Aîné</td>
-			<td>Le pavillon blanc</td>
-		</tr>
-		<tr>
-			<td>Karita</td>
-			<td>Barde de l'auberge Montvent</td>
-			<td>Auberge Montvent</td>
-		</tr>
-
-
-
-
-
-
-
-
-
-	</tbody>
-</table>
-
-
 
 
 </section>
 
 
-
-
-
-
-
-
-
-
-
-
-<hr>
-<!--                             ALENTOURS                              -->
-<section>
-	<h2 id="nav_alentours">Alentours</h2>
-<p></p>
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<hr>
-<!--                             VUES                              -->
-<section>
-	<h2 id="nav_vues">Les meilleures vues sur Aubétoile</h2>
-<p></p>
-
-<img class ="vues" src="mx/aubetoile_1.jpg" alt="Aubétoile">
-<img class ="vues" src="mx/aubetoile_2.jpg" alt="Aubétoile">
-<img class ="vues" src="mx/aubetoile_3.jpg" alt="Aubétoile">
-<img class ="vues" src="mx/aubetoile_4.jpg" alt="Aubétoile">
-<img class ="vues" src="mx/aubetoile_5.jpg" alt="Aubétoile">
-<img class ="vues" src="mx/aubetoile_6.jpg" alt="Aubétoile">
-</section>
-
-
-<hr>
 </main>
+
+
+
 <!--                   FOOTER                    -->
 <footer>
 
