--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 
-<a href="aubetoile.html">Aubétoile</a>
+
 
 
 
@@ -34,10 +34,23 @@
 <!--                   MAIN                    -->
 <main>
 <hr>
-<!--                             H                              -->
+<!--                             HISTOIRE                              -->
 <section>
+<span style="width: 40%">
+
+	<h2>Lieux</h2>
+
+<p class="lieux">
+	<a href="aubetoile.html" id="au">Aubétoile</a><br>
+</p>
 
 
+
+
+</span>
+<figure style="width: 50%; margin: 0%; float: right;">
+	<img src="mx/carte_le_clos.jpg" alt="Bordeciel" title="Bordeciel" width="100%">
+</figure>
 </section>
 
 
