--- a/aubetoile.html
+++ b/aubetoile.html
@@ -11,37 +11,44 @@
 
 
 
-<!--                   PANEL                    -->
 
-<div class="panel">
+
+<!--                   PANEL                   -->
+
+<section class="nav_panel">
+			<a class="back_to_le_clos" href="index.html">&#8592; Le Clos</a>
 	<img src="mx/panel.png" width="100%">
-	<span class="panel">
-		<a href="#nav_histoire">Histoire</a>
-		<a href="#nav_localisations">Localisations</a>
-		<a href="#nav_personnages">Personnages</a>
-		<a href="#nav_alentours">Alentours</a>
-		<a href="#nav_vues">Les meilleures vues sur la ville</a>
-	</span>
-</div>
+	<nav class="nav_panel">
+			<a href="#nav_histoire">Histoire</a>
+			<a href="#nav_localisations">Localisations</a>
+			<a href="#nav_personnages">Personnages</a>
+			<a href="#nav_alentours">Alentours</a>
+			<a href="#nav_vues">Les vues sur la ville</a>
+	</nav>
+</section>
+
+
+
 
 
 
 <!--                   HEADER                    -->
-<header>
 <img class= "header_image" src="mx/aubetoile_tete.jpg" width="100%" alt="La vue sur Aubétoile" title="La vue sur Aubétoile">
+
+<header>
 <hr>
-<div>
-	<h1>La Ville d'Aubétoile</h1>
-</div>
-<section class="nav">
-	<nav>
-		<a href="#nav_histoire" style="width: 18%;">Histoire</a>
-		<a href="#nav_localisations" style="width: 18%;">Localisations</a>
-		<a href="#nav_personnages" style="width: 18%;">Personnages</a>
-		<a href="#nav_alentours" style="width: 18%;">Alentours</a>
-		<a href="#nav_vues" style="width: 22%;">Les meilleures vues sur la ville</a>
-	</nav>
-</section>
+	<div>
+		<h1>La Ville d'Aubétoile</h1>
+	</div>
+	<section class="nav_top">
+		<nav class="nav_top">
+			<a href="#nav_histoire" style="width: 19%;">Histoire</a>
+			<a href="#nav_localisations" style="width: 19%;">Localisations</a>
+			<a href="#nav_personnages" style="width: 19%;">Personnages</a>
+			<a href="#nav_alentours" style="width: 19%;">Alentours</a>
+			<a href="#nav_vues" style="width: 19%;">Les vues sur la ville</a>
+		</nav>
+	</section>
 
 
 
@@ -59,21 +66,21 @@
 <!--                             HISTOIRE                              -->
 <section class="histoire">
 	<h2 id="nav_histoire">Histoire</h2>
-<span class="histoire">
-<p class="histoire">La date de construction d'Aubétoile est inconnue, mais elle existe depuis au moins 1E 2920, comme mentionné dans le "2920, vol. 10 - Soufflegivre".</p>
-<p class="histoire">Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
-<p class="histoire">Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
-<p class="histoire">Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
-</span>
-<figure class="histoire">
-	<img src="mx/livre_1.png" alt="Livre: 2920, vol. 10 - Soufflegivre" title="2920, vol. 10 - Soufflegivre" width="95%">
-	<figcaption>2920, vol. 10 - Soufflegivre</figcaption>
-</figure>
-<figure class="histoire">
-	<img src="mx/livre_2.png" alt="Livre: Guide de poche de l'Empire" title="Guide de poche de l'Empire" width="95%">
-	<figcaption>Guide de poche de l'Empire, <br>
+	<span class="histoire">
+		<p class="histoire">La date de construction d'Aubétoile est inconnue, mais elle existe depuis au moins 1E 2920, comme mentionné dans le "2920, vol. 10 - Soufflegivre".</p>
+		<p class="histoire">Après la destruction d'une forteresse à Aubétoile durant l'année 2E 283, le potentat Versidue-Shaie a déclaré la loi martiale, conduisant à l'une des périodes les plus brutales et sanglantes de l'histoire de Tamriel. Cela a conduit également à la création de la Guilde des guerriers, de la Guilde des mages et de la Guilde des voleurs à la promulgation de l'édit des guildes par le potentat.</p>
+		<p class="histoire">Le village a été reconstruit au moins avant la fin de la Ère Troisième. Cependant, il est indiqué dans le "Guide de poche de l'Empire, Troisième édition : Bordeciel" que Macalla était la reine d'Aubétoile et avait épousé le roi Thian de Solitude.</p>
+		<p class="histoire">Vers l'année 4E 201, les citoyens d'Aubétoile souffraient d'une série de cauchemars du Crâne de corruption. L'Enfant de Dragon et un ancien prêtre de Vaermina, un Dunmer nommé Érandur, sont allés au temple de Sorguevoix et ont mis fin aux souffrances de la ville.</p>
+	</span>
+	<figure class="histoire">
+		<img src="mx/livre_1.png" alt="Livre: 2920, vol. 10 - Soufflegivre" title="2920, vol. 10 - Soufflegivre" width="95%">
+		<figcaption>2920, vol. 10 - Soufflegivre</figcaption>
+	</figure>
+	<figure class="histoire">
+		<img src="mx/livre_2.png" alt="Livre: Guide de poche de l'Empire" title="Guide de poche de l'Empire" width="95%">
+		<figcaption>Guide de poche de l'Empire, <br>
 	Troisième édition: Bordeciel</figcaption>
-</figure>
+	</figure>
 </section>
 
 
@@ -90,43 +97,43 @@
 <!--                             LOCALISATIONS                              -->
 <section class="localisations">
 	<h2 id="nav_localisations">Localisations</h2>
-<figure class="localisations" style="width: 49%; margin: 0% 1% 2% 0%;">
-	<img src="mx/carte_2.jpg" alt="La carte de la ville" title="La carte de la ville" width="100%">
-</figure>
-<span class="localisations">
-					<h3>Services</h5>
-					<ul>
-						<li>Auberge Montvent</li>
-						<li>La Panacée</li>
-						<li>Maison de Rustleif</li>
-					</ul>
-				</span>
-<span class="localisations">
-					<h3>Maisons</h5>
-					<ul>
-						<li>Maison d'Irgnir</li>
-						<li>Maison de Beitild</li>
-						<li>Maison de Brina</li>
-						<li>Maison de Fruki</li>
-						<li>Maison de Leigelf</li>
-						<li>Maison de Silus Vésuius</li>
-					</ul>
-				</span>
-<span class="localisations" style="height: 220px; margin-bottom: 10px">
-					<h3>Gouvernement</h5>
-					<ul>
-						<li>Le pavillon blanc - résidence du jarl</li>
-						<li>Baraquements d'Aubétoile</li>
-					</ul>
-				</span>
-<span class="localisations" style="height: 220px; margin-bottom: 10px">
-					<h3>Autres</h5>
-					<ul>
-						<li>Mine de Brise-Fer</li>
-						<li>Mine de Vif-Argent</li>
-						<li>Le Bourrasque</li>
-					</ul>
-				</span>
+	<figure class="localisations">
+		<img src="mx/carte_2.jpg" alt="La carte de la ville" title="La carte de la ville" width="100%">
+	</figure>
+	<span class="localisations">
+		<h3>Services</h3>
+		<ul>
+			<li>Auberge Montvent</li>
+			<li>La Panacée</li>
+			<li>Maison de Rustleif</li>
+		</ul>
+	</span>
+	<span class="localisations">
+		<h3>Maisons</h3>
+		<ul>
+			<li>Maison d'Irgnir</li>
+			<li>Maison de Beitild</li>
+			<li>Maison de Brina</li>
+			<li>Maison de Fruki</li>
+			<li>Maison de Leigelf</li>
+			<li>Maison de Silus Vésuius</li>
+		</ul>
+	</span>
+<span class="localisations" style="height: 200px; margin-bottom: 10px">
+		<h3>Gouvernement</h3>
+		<ul>
+			<li>Le pavillon blanc - résidence du jarl</li>
+			<li>Baraquements d'Aubétoile</li>
+		</ul>
+	</span>
+<span class="localisations" style="height: 200px; margin-bottom: 10px">
+		<h3>Autres</h3>
+		<ul>
+			<li>Mine de Brise-Fer</li>
+			<li>Mine de Vif-Argent</li>
+			<li>Le Bourrasque</li>
+		</ul>
+	</span>
 </section>
 
 
@@ -145,7 +152,7 @@
 <section>
 	<h2 id="nav_personnages">Personnages</h2>
 
-<table>
+<table class="table_1">
 	<thead>
 		<tr>
 			<td>Le Nom</td>
@@ -244,7 +251,7 @@
 
 
 
-<table>
+<table class="table_2">
 	<thead>
 		<tr>
 			<td>Le Nom</td>
@@ -256,7 +263,7 @@
 		<tr>
 			<td>Harlaug</td>
 			<td>Navigateur</td>
-			<td>le bateau en baie</td>
+			<td>Le bateau en baie</td>
 		</tr>
 		<tr>
 			<td>Horik Mi-Main</td>
@@ -281,6 +288,61 @@
 		<tr>
 			<td>Karita</td>
 			<td>Barde de l'auberge Montvent</td>
+			<td>Auberge Montvent</td>
+		</tr>
+		<tr>
+			<td>Karl</td>
+			<td>Mineur</td>
+			<td>Mine de Brise-Fer</td>
+		</tr>
+		<tr>
+			<td>Leigelf</td>
+			<td>Propriétaire de la mine de Vif-Argent</td>
+			<td>Maison de Leigelf</td>
+		</tr>
+		<tr>
+			<td>Lond</td>
+			<td>Mineur</td>
+			<td>Mine de Vif-Argent</td>
+		</tr>
+		<tr>
+			<td>Madéna</td>
+			<td>Mage de la cour</td>
+			<td>Le pavillon blanc</td>
+		</tr>
+		<tr>
+			<td>Ravam Véréthi</td>
+			<td>Marin</td>
+			<td>Le Bourrasque</td>
+		</tr>
+		<tr>
+			<td>Rustleif</td>
+			<td>Forgeron</td>
+			<td>Maison de Rustleif</td>
+		</tr>
+		<tr>
+			<td>Séren</td>
+			<td>Forgeron</td>
+			<td>Maison de Rustleif</td>
+		</tr>
+		<tr>
+			<td>Silus Vésuius</td>
+			<td>Propr. du musée de l'Aube mythique</td>
+			<td>Maison de Silus Vésuius</td>
+		</tr>
+		<tr>
+			<td>Skald l'Aîné</td>
+			<td>Le jarl du Clos</td>
+			<td>Le pavillon blanc</td>
+		</tr>
+		<tr>
+			<td>Stig Planche-Salée</td>
+			<td>Pirate des Horqueurs sanguinaires</td>
+			<td>Auberge Montvent</td>
+		</tr>
+		<tr>
+			<td>Thoring</td>
+			<td>Tenancier de l'auberge Montvent</td>
 			<td>Auberge Montvent</td>
 		</tr>
 
@@ -334,7 +396,7 @@
 <hr>
 <!--                             VUES                              -->
 <section>
-	<h2 id="nav_vues">Les meilleures vues sur Aubétoile</h2>
+	<h2 id="nav_vues">Les vues sur la ville</h2>
 <p></p>
 
 <img class ="vues" src="mx/aubetoile_1.jpg" alt="Aubétoile">
