--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
   <meta charset = "UTF-8">
-  <title>Le Clos</title>
+  <title>Clos</title>
   	<link rel="stylesheet" href="mx/styles.css">
 </head>
 <body>
